manifests/workloads/immich/immich-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - immich.chik4ge.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
